# openbest

./: CMakeLists.txt  Doxyfile  FindAtlas.cmake  README.md  README.openbest  exportBESTdata.m
dat/: badFlags.txt  countryCodes.txt  countryNames.txt  dataFlags.txt  dataFlags2.txt  data_reduced.txt  flags_reduced.txt  matchFlags.txt  matchFlags2.txt  recordTypes2.txt  siteFlags.txt  siteFlags2.txt  site_complete_detail_reduced.txt  site_flags_reduced.txt  sourceFileCodes.txt  sourceRecordTypes.txt  sourceTypes.txt  stationRecordTypes.txt
dat/precomputed/: r_p.txt
matlab/: exportBESTdata.m
plot/: annual.p  five_year.p  monthly.p  ten_year.p  twenty_year.p
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/berkeleyAverage/: CMakeLists.txt  berkeleyAverage.c
src/apps/sampleDataset/: CMakeLists.txt  sampleDataset.c
src/lib/: CMakeLists.txt
src/lib/ds/: CMakeLists.txt  hello-openbest.c  hello-openbest.h
src/lib/io/: CMakeLists.txt
src/lib/openbest-av/: CMakeLists.txt  assignElevation.c  assignElevation.h  berkeleyAverage.c  berkeleyAverage.h  berkeleyAverageCore.c  berkeleyAverageCore.h  berkeleyAverageOptions.c  berkeleyAverageOptions.h  berkeleyAverageResults.c  berkeleyAverageResults.h  buildBaselineTable.c  buildBaselineTable.h  buildCovarianceTable.c  buildCovarianceTable.h  buildMatrices.c  buildMatrices.h  buildSpatialMap.c  buildSpatialMap.h  buildTargetTable.c  buildTargetTable.h  collapseLocations.c  collapseLocations.h  computeStatisticalUncertainty.c  computeStatisticalUncertainty.h  equationSolvers.c  equationSolvers.h  idealGrid.c  idealGrid.h  movingAverages.c  movingAverages.h  performFit.c  performFit.h  scalpelMethods.c  scalpelMethods.h  scoreFit.c  scoreFit.h
src/lib/openbest-ds/: CMakeLists.txt  basicAlgorithms.c  basicAlgorithms.h  config-ds.h  config-ds.h.in  config.h  geoPoint.c  geoPoint.c~  geoPoint.h  geoPoint.h~  geoPoint2.c  geoPoint2.h  geoPoint2Vector.c  geoPoint2Vector.h  geoPointVector.c  geoPointVector.h  hello-openbest.c  hello-openbest.h  init-ds.c  init-ds.h  init.c  init.h  makeSingleValued.c  makeSingleValued.h  mathFunctions.c  mathFunctions.h  matrix3.c  matrix3.h  memFunctions.c  memFunctions.h  optionTable.c  optionTable.h  primaryKeyTable.c  primaryKeyTable.h  primaryKeyTables.h  printOut.c  printOut.h  stationElement.h  stationElement2.c  stationElement2.h  (+17 more)
src/lib/openbest-io/: CMakeLists.txt  config-io.h  config-io.h.in  loadCountryCodes.c  loadCountryCodes.h  loadCountryNames.c  loadCountryNames.h  loadData.c  loadData.h  loadDataFlags.c  loadDataFlags.h  loadMatchFlags.c  loadMatchFlags.h  loadOptions.c  loadOptions.h  loadOtherFlags.c  loadOtherFlags.h  loadSiteFlags.c  loadSiteFlags.h  loadStationRecordTypes.c  loadStationRecordTypes.h  loadStationSourceTypes.c  loadStationSourceTypes.h
src/test/: CMakeLists.txt
src/test/test-av/: CMakeLists.txt  test-av.c
src/test/test-ds/: CMakeLists.txt  test-ds.c
src/test/test-io/: CMakeLists.txt  test-io.c
src/test/test-matio/: CMakeLists.txt  test-matio.c
src/test/test-sc/: CMakeLists.txt  test-sc.c
