CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PACKAGE_NAME openbestio)

SET(CMAKE_C_COMPILER gcc)

PROJECT(openbestio C)

AUX_SOURCE_DIRECTORY(. SRCVAR)

ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRCVAR})

INCLUDE_DIRECTORIES(${PROJECT_DIR}/src/lib)

SET_TARGET_PROPERTIES(${PACKAGE_NAME} PROPERTIES LINKER_LANGUAGE C)

SET(CMAKE_VERBOSE_MAKEFILE on)