CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PACKAGE_NAME openbest-av)

SET(CMAKE_C_COMPILER gcc)

PROJECT(openbestds C)

AUX_SOURCE_DIRECTORY(. SRCVAR)

LINK_DIRECTORIES(${PROJECT_DIR}/lib)
INCLUDE_DIRECTORIES(${PROJECT_DIR}/src/lib/)

ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRCVAR})

TARGET_LINK_LIBRARIES(${PACKAGE_NAME} m ${GSL_LIBRARIES} lapacke lapack)

SET_TARGET_PROPERTIES(${PACKAGE_NAME} PROPERTIES LINKER_LANGUAGE C)

INSTALL(TARGETS ${PACKAGE_NAME} DESTINATION lib)

INSTALL(DIRECTORY . DESTINATION include/${PACKAGE_NAME} FILES_MATCHING PATTERN "*.h" PATTERN ".git" EXCLUDE PATTERN "CM*" EXCLUDE)

CONFIGURE_FILE("config-av.h.in" "config-av.h")

SET(CMAKE_VERBOSE_MAKEFILE on)
