CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PACKAGE_NAME openbest-ds)

SET(CMAKE_C_COMPILER gcc)

PROJECT(openbestds C)

AUX_SOURCE_DIRECTORY(. SRCVAR)

ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRCVAR})

TARGET_LINK_LIBRARIES(${PACKAGE_NAME} m)

MESSAGE(${PROJECT_DIR})

INCLUDE_DIRECTORIES(${PROJECT_DIR}/src/lib/)

SET_TARGET_PROPERTIES(${PACKAGE_NAME} PROPERTIES LINKER_LANGUAGE C)

INSTALL(TARGETS ${PACKAGE_NAME} DESTINATION lib)

INSTALL(DIRECTORY . DESTINATION include/${PACKAGE_NAME} FILES_MATCHING PATTERN "*.h" PATTERN ".git" EXCLUDE PATTERN "CM*" EXCLUDE)

SET(CMAKE_VERBOSE_MAKEFILE on)