CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PACKAGE_NAME openbest-io)

SET(CMAKE_C_COMPILER gcc)

PROJECT(openbestds C)

AUX_SOURCE_DIRECTORY(. SRCVAR)

ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRCVAR})

TARGET_LINK_LIBRARIES(${PACKAGE_NAME} m)

INCLUDE_DIRECTORIES(${PROJECT_DIR}/src/lib/)

SET_TARGET_PROPERTIES(${PACKAGE_NAME} PROPERTIES LINKER_LANGUAGE C)

INSTALL(TARGETS ${PACKAGE_NAME} DESTINATION lib)

INSTALL(DIRECTORY . DESTINATION include/${PACKAGE_NAME} FILES_MATCHING PATTERN "*.h" PATTERN ".git" EXCLUDE PATTERN "CM*" EXCLUDE)

IF ( ${DEVEL_BUILD} )
  SET(DATA_DIR "\"${PROJECT_DIR}/dat/\"")
ELSE (${DEVEL_BUILD} )
  SET(DATA_DIR "${CMAKE_INSTALL_PREFIX}/dat")
ENDIF ( ${DEVEL_BUILD} )

MESSAGE(${FULL_DATA})
IF ( ${FULL_DATA} )
   SET(REDUCED_FLAG "")
ELSE (${FULL_DATA} )
   SET(REDUCED_FLAG "_reduced")
ENDIF (${FULL_DATA} )

CONFIGURE_FILE("config-io.h.in" "config-io.h")

SET(FULL_DATA "off" CACHE STRING "" FORCE)

SET(CMAKE_VERBOSE_MAKEFILE on)
