CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PACKAGE_NAME test-sc)

SET(CMAKE_C_FLAGS "-fopenmp -Wall -Wextra -fPIC")
SET(CMAKE_C_FLAGS_DEBUG "-g -O0")
SET(CMAKE_C_FLAGS_RELEASE "-O2")

PROJECT(${PACKAGE_NAME} C)

LINK_DIRECTORIES(${PROJECT_DIR}/lib)
INCLUDE_DIRECTORIES(${PROJECT_DIR}/src/lib)

AUX_SOURCE_DIRECTORY(. SRCVAR)

ADD_EXECUTABLE(${PACKAGE_NAME} ${SRCVAR})

TARGET_LINK_LIBRARIES(${PACKAGE_NAME} openbest-ds openbest-io openbest-av lapacke)

SET_TARGET_PROPERTIES(${PACKAGE_NAME} PROPERTIES LINKER_LANGUAGE C)

INSTALL(TARGETS ${PACKAGE_NAME} DESTINATION bin)

SET(CMAKE_VERBOSE_MAKEFILE on)
